<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    tools:context=".SplashActivity">

    <TextView
        android:id="@+id/tv_appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/im_logo"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="@+id/im_logo"
        app:layout_constraintTop_toBottomOf="@+id/im_logo"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_studio1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/studio"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_Studio2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:text="@string/from"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tv_studio1"
        app:layout_constraintEnd_toEndOf="@+id/tv_studio1"
        app:layout_constraintStart_toStartOf="@+id/tv_studio1" />

    <ImageView
        android:id="@+id/im_logo"
        android:layout_width="180dp"
        android:layout_height="181dp"
        android:layout_marginTop="144dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon"
        tools:ignore="ContentDescription"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:scaleY="3"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_appName"
        app:layout_constraintStart_toStartOf="@+id/tv_appName"
        app:layout_constraintTop_toBottomOf="@+id/tv_appName" />

</androidx.constraintlayout.widget.ConstraintLayout>